--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,13 @@
   text-align: center;
 }
 
+.App-logo{
+  height: 40vmin;
+  position: fixed;
+  
+  
+}
+
 .ui.main.container{
   margin-top: 8em;
 }
